minor fix on students table when overlaping y axis

--- a/frontend/src/app/components/teacher-hub/list-course/single-course/single-course.component.css
+++ b/frontend/src/app/components/teacher-hub/list-course/single-course/single-course.component.css
@@ -72,6 +72,7 @@
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.16);
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.16);
   border: 1px solid #839b97;
+  overflow-y: auto;
 }
 
 .btn-hub:hover {
